# BSL_Excel

./: .gitignore  README.md  To Do.txt  main.py  manifest.xml  pyproject.toml  semantic_config.py
.claude/: settings.local.json
app/: api.py  loader.py
docs/: index.html  taskpane.css  taskpane.js
scripts/: generate_demo_db.py
